--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
-<a href ="https://eller.arizona.edu/departments-research/schools-departments/economics">
+<a href ="https://eller.arizona.edu/departments-research/schools-departments/economics"> UA Department Page
 </body>
 </html>
